--- a/.config/i3/config
+++ b/.config/i3/config
@@ -20,7 +20,6 @@ for_window [class="^.*"] border pixel 3
 gaps inner 25
 gaps outer 0
 
-
 set $base00 #313440
 set $base01 #282C34
 set $base02 #FAFAFA
@@ -37,24 +36,6 @@ set $base0C #5FAFFF
 set $base0D #5FAFFF
 set $base0E #FF79C6
 set $base0F #eb9b5c
-
-# Basic bar configuration using the Base16 variables.
-bar {
-    status_command i3status
-
-    colors {
-        background $base00
-        separator  $base01
-        statusline $base04
-
-        # State             Border  BG      Text
-        focused_workspace   $base05 $base0D $base00
-        active_workspace    $base05 $base03 $base00
-        inactive_workspace  $base03 $base01 $base05
-        urgent_workspace    $base08 $base08 $base00
-        binding_mode        $base00 $base0A $base00
-    }
-}
 
 # Basic color configuration using the Base16 variables for windows and borders.
 # Property Name         Border  BG      Text    Indicator Child Border
@@ -87,11 +68,15 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
+# brightness
+bindsym XF86MonBrightnessUp exec xbacklight -inc 10
+bindsym XF86MonBrightnessDown exec xbacklight -dec 10
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -197,6 +182,8 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
+bindsym --release Print exec scrot 'screenshot_%Y%m%d_%H%M%S.png' -e 'mkdir -p ~/Pictures/screenshots && mv $f ~/Pictures/screenshots && xclip -selection clipboard -t image/png -i ~/Pictures/screenshots/`ls -1 -t ~/Pictures/screenshots | head -1`' # All screens
+
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
@@ -225,19 +212,22 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # lock screen
-bindsym $mod+x exec i3lock
+bindsym $mod+x exec i3lock-fancy -f Fira-Code-Regular-Nerd-Font-Complete
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-		position top
-        status_command i3status -c ~/.config/i3/status
-}
+exec_always killall polybar
+exec_always killall conky
+exec_always killall mpd
+exec_always killall picom
+exec_always killall nitrogen
 
-exec conky -c ~/.config/conky/conky-fsociety/fsocietyrc 
+exec_always --no-startup-id setxkbmap -layout us,ca -variant qwerty -option grp:alt_shift_toggle
 
-exec mpd
+exec_always --no-startup-id polybar purify-bar
 
-exec picom
+exec_always --no-startup-id conky -c ~/.config/conky/conky-fsociety/fsocietyrc 
 
-exec nitrogen --restore
+exec_always --no-startup-id mpd
+
+exec_always --no-startup-id picom --experimental-backends 
+
+exec_always --no-startup-id nitrogen --restore
