--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,78 +1,78 @@
-## shadow
+##### picom.conf / RESLOVED #######################
 
-shadow = false;
+backend ="glx";
 
-# [ 16/05/20 17:57:45.938 parse_config_libconfig WARN ] Option `no-dnd-shadow`
-# is deprecated, and will be removed. Please use the wintype option `shadow` of
-# `dnd` instead.
-#no-dnd-shadow = true;
-# [ 16/05/20 17:57:45.938 parse_config_libconfig WARN ] Option `no-dock-shadow`
-# is deprecated, and will be removed. Please use the wintype option `shadow` of
-# `dock` instead.
-#no-dock-shadow = true;
-# [ 16/05/20 17:57:45.938 parse_config_libconfig WARN ] "clear-shadow" is
-# removed as an option, and is always enabled now. Consider removing it from
-# your config file
-#clear-shadow = true;
-shadow-radius = 12;
-shadow-offset-x = -12;
-shadow-offset-y = -12;
-shadow-opacity = 0.95;
-shadow-red = 0.18;
-shadow-green = 0.20;
-shadow-blue = 0.25;
-shadow-exclude = [ "class_g = 'Cairo-clock'" ,
-	"class_g = 'CoverGloobus'",
-	"class_g = 'Tilda'",
-	"class_g = 'Conky'",
-	"class_g ?= 'Notify-osd'",
-	"class_g = 'Firefox'",
-	"class_g = 'Firefox-esr'",
-	"class_g = 'Dmenu'",
+##### SHADOW ######################################
+
+shadow = true;
+
+# Soft
+shadow-radius = 5;
+shadow-offset-x = -5;
+shadow-offset-y = -5;
+shadow-opacity = 0.5;
+
+shadow-exclude = [
 	"name = 'Notification'",
-	"_GTK_FRAME_EXTENTS@:c"
+    "class_g = 'Rofi'",
+    "class_g = 'i3-frame'",
+    "class_g = 'conky'"
 ];
 
-## fading
+##### BLUR ########################################
+
+blur-background = true;
+blur-background-frame = true;
+blur-background-fixed = true;
+
+blur: {
+	method = "gaussian";
+	size = 10;
+	deviation = 5; 
+	strength = 10;
+}
+
+blur-background-exclude = [
+    "window_type = 'dock'",
+    "window_type = 'desktop'",
+    "_GTK_FRAME_EXTENTS@:c"
+];
+
+inactive-opacity = 0.80;
+active-opacity = 1;
+frame-opacity = 1;
+inactive-opacity-override = true;
+
+##### FADE ########################################
+
 fading = true;
-fade-delta = 0.25;
+fade-delta = 10;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
-fade-exclude = [];
+#no-fading-openclose = true;
+#no-fading-destroyed-argb = true;
 
-## other
-backend = "xrender";
-mark-wmwin-focused = true;
-mark-ovredir-focused = true;
-detect-rounded-corners = true;
-detect-client-opacity = true;
+##### OTHER #######################################
+
 refresh-rate = 0;
-# [ 16/05/20 17:57:45.938 parse_config_libconfig WARN ] vsync option will take a
-# boolean from now on. "none" is interpreted as "false" for compatibility, but
-# this will stop working soon
-vsync = false;
-dbe = false;
-# [ 16/05/20 17:57:45.938 parse_config_libconfig ERROR ] "paint-on-overlay" has
-# been removed as an option, and the feature is enabled whenever possible
-#paint-on-overlay = true;
-focus-exclude = [ 
-	"class_g = 'Cairo-clock'" ,
-	"class_g = 'CoverGloobus'",
-	"class_g = 'Tilda'",
-	"class_g = 'Firefox'",
-	"class_g = 'Firefox-esr'"
-];
 
-detect-transient = true;
-detect-client-leader = true;
-invert-color-include = [ ];
-glx-copy-from-front = false;
-# [ 16/05/20 17:57:45.938 parse_config_libconfig WARN ] glx-swap-method has been
-# deprecated since v6, your setting "undefined" should be replaced by
-# `use-damage = true`.
-#glx-swap-method = "undefined";
-use-damage = true;
+corner-radius = 15
+
+round-borders = 15;
+
+vsync = true;
+
+# WINDOW TYPE SETTINGS
 wintypes:
 {
-  tooltip = { fade = true; shadow = false; opacity = 0.75; focus = true; };
+	tooltip = { 
+		fade = true; 
+		shadow = true; 
+		opacity = 0.9; 
+		focus = true;
+	};
+	dock = { shadow = false; }
+	dnd = { shadow = false; }
+	popup_menu = { opacity = 0.9; }
+	dropdown_menu = { opacity = 0.9; }
 };
